# validus-exercise

./: .gitignore  README.md  pyproject.toml
api/: main.py
examples/: diff_demo.py  example_scenarios.py  export_history_json.py  presentation_demo.py  quick_start.py  scenarios.py  trade_history.json
tests/: test_api.py  test_trade_approval.py
trade_approval/: __init__.py  exceptions.py  models.py  presentation.py  store.py  trade.py  validation.py
