[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-approval"
version = "0.1.0"
description = "Trade Approval Workflow Library – Validus Case Study"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]

[tool.setuptools.packages.find]
include = ["trade_approval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
